...
        }}
      />
      <Tabs.Screen
        name="create"
        options={{
          tabBarIcon: ({ focused }) => (
            <TabIcon name="Créer" emoji="🎬" focused={focused} />
          ),
        }}
      />
      <Tabs.Screen
        name="library"
        options={{
...
